Fixes combined verses breaks

--- a/1/16-18.md
+++ b/1/16-18.md
@@ -10,10 +10,14 @@
 анантавиджайам̇ ра̄джа̄  
 кунтӣ-путро йудхишх̣хират̣  
 накулат̣ сахадеваш́ ча  
-сугхоша-ман̣ипушпакаука̄ш́йаш́ ча парамешв-а̄сат̣  
+сугхоша-ман̣ипушпакау  
+
+ка̄ш́йаш́ ча парамешв-а̄сат̣  
 ш́икхан̣д̣ӣ ча маха̄-ратхат̣  
 дхр̣шх̣адйумно вира̄х̣аш́ ча  
-са̄тйакиш́ ча̄пара̄джитат̣друпадо драупадейа̄ш́ ча  
+са̄тйакиш́ ча̄пара̄джитат̣  
+
+друпадо драупадейа̄ш́ ча  
 сарваш́ат̣ пр̣тхивӣ-пате  
 саубхадраш́ ча маха̄-ба̄хут̣  
 ш́ан̇кха̄н дадхмут̣ пр̣тхак пр̣тхак
