--- a/1/21-22.md
+++ b/1/21-22.md
@@ -9,7 +9,9 @@
 сенайор убхайор мадхйе  
 ратхам̇ стха̄пайа ме ’чйута  
 йа̄вад эта̄н нирӣкше ’хам̇  
-йоддху-ка̄ма̄н авастхита̄нкаир майа̄ саха йоддхавйам  
+йоддху-ка̄ма̄н авастхита̄н  
+
+каир майа̄ саха йоддхавйам  
 асмин ран̣а-самудйаме
 
 _арджунат̣ ува̄ча_ — Арджуна сказал; _сенайот̣_ — армий; _убхайот̣_ — двух; _мадхйе_ — между; _ратхам_ — колесницу; _стха̄пайа_ — останови; _ме_ — мою; _ачйута_ — о непогрешимый; _йа̄ват_ — пока; _эта̄н_ — на этих; _нирӣкше_ — гляжу; _ахам_ — я; _йоддху-ка̄ма̄н_ — желающих сражаться; _авастхита̄н_ — выстроившихся на поле боя; _каит̣_ — с которыми; _майа̄_ — мной; _саха_ — вместе; _йоддхавйам_ — необходимость сражаться; _асмин_ — в этой; _ран̣а_ — битвы; _самудйаме_ — в попытке.
