--- a/1/32-35.md
+++ b/1/32-35.md
@@ -11,13 +11,19 @@
 ким̇ но ра̄джйена говинда  
 ким̇ бхогаир джӣвитена ва̄  
 йеша̄м артхе ка̄н̇кшитам̇ но  
-ра̄джйам̇ бхога̄т̣ сукха̄ни чата име ’вастхита̄ йуддхе  
+ра̄джйам̇ бхога̄т̣ сукха̄ни ча  
+
+та име ’вастхита̄ йуддхе  
 пра̄н̣а̄м̇с тйактва̄ дхана̄ни ча  
 а̄ча̄рйа̄т̣ питарат̣ путра̄с  
-татхаива ча пита̄маха̄т̣ма̄тула̄т̣ ш́ваш́ура̄т̣ паутра̄т̣  
+татхаива ча пита̄маха̄т̣  
+
+ма̄тула̄т̣ ш́ваш́ура̄т̣ паутра̄т̣  
 ш́йа̄ла̄т̣ самбандхинас татха̄  
 эта̄н на хантум иччха̄ми  
-гхнато ’пи мадхусӯданаапи траилокйа-ра̄джйасйа  
+гхнато ’пи мадхусӯдана  
+
+апи траилокйа-ра̄джйасйа  
 хетот̣ ким̇ ну махӣ-кр̣те  
 нихатйа дха̄ртара̄шх̣ра̄н нат̣  
 ка̄ прӣтит̣ сйа̄дж джана̄рдана
