--- a/1/37-38.md
+++ b/1/37-38.md
@@ -8,7 +8,9 @@
 йадй апй эте на паш́йанти  
 лобхопахата-четасат̣  
 кула-кшайа-кр̣там̇ дошам̇  
-митра-дрохе ча па̄такамкатхам̇ на джн̃ейам асма̄бхит̣  
+митра-дрохе ча па̄такам  
+
+катхам̇ на джн̃ейам асма̄бхит̣  
 па̄па̄д асма̄н нивартитум  
 кула-кшайа-кр̣там̇ дошам̇  
 прапаш́йадбхир джана̄рдана
