--- a/10/4-5.md
+++ b/10/4-5.md
@@ -8,7 +8,9 @@
 буддхир джн̃а̄нам асаммохат̣  
 кшама̄ сатйам̇ дамат̣ ш́амат̣  
 сукхам̇ дут̣кхам̇ бхаво ’бха̄во  
-бхайам̇ ча̄бхайам эва чаахим̇са̄ самата̄ тушх̣ис  
+бхайам̇ ча̄бхайам эва ча  
+
+ахим̇са̄ самата̄ тушх̣ис  
 тапо да̄нам̇ йаш́о ’йаш́ат̣  
 бхаванти бха̄ва̄ бхӯта̄на̄м̇  
 матта эва пр̣тхаг-видха̄т̣
