--- a/11/10-11.md
+++ b/11/10-11.md
@@ -8,7 +8,9 @@
 анека-вактра-найанам  
 анека̄дбхута-дарш́анам  
 анека-дивйа̄бхаран̣ам̇  
-дивйа̄некодйата̄йудхамдивйа-ма̄лйа̄мбара-дхарам̇  
+дивйа̄некодйата̄йудхам  
+
+дивйа-ма̄лйа̄мбара-дхарам̇  
 дивйа-гандха̄нулепанам  
 сарва̄ш́чарйа-майам̇ девам  
 анантам̇ виш́вато-мукхам
