--- a/11/26-27.md
+++ b/11/26-27.md
@@ -12,7 +12,9 @@
 амӣ ча тва̄м̇ дхр̣тара̄шх̣расйа путра̄т̣  
 сарве сахаива̄вани-па̄ла-сан̇гхаит̣  
 бхӣшмо дрон̣ат̣ сӯта-путрас татха̄сау  
-саха̄смадӣйаир апи йодха-мукхйаит̣вактра̄н̣и те тварама̄н̣а̄ виш́анти  
+саха̄смадӣйаир апи йодха-мукхйаит̣  
+
+вактра̄н̣и те тварама̄н̣а̄ виш́анти  
 дам̇шх̣ра̄-кара̄ла̄ни бхайа̄нака̄ни  
 кечид вилагна̄ даш́ана̄нтарешу  
 сандр̣ш́йанте чӯрн̣итаир уттама̄н̇гаит̣
