--- a/11/41-42.md
+++ b/11/41-42.md
@@ -12,7 +12,9 @@
 сакхети матва̄ прасабхам̇ йад уктам̇  
 хе кр̣шн̣а хе йа̄дава хе сакхети  
 аджа̄ната̄ махима̄нам̇ таведам̇  
-майа̄ прама̄да̄т пран̣айена ва̄пийач ча̄ваха̄са̄ртхам асат-кр̣то ’си  
+майа̄ прама̄да̄т пран̣айена ва̄пи  
+
+йач ча̄ваха̄са̄ртхам асат-кр̣то ’си  
 виха̄ра-ш́аййа̄сана-бходжанешу  
 эко ’тха ва̄пй ачйута тат-самакшам̇  
 тат кша̄майе тва̄м ахам апрамейам
