--- a/12/13-14.md
+++ b/12/13-14.md
@@ -8,7 +8,9 @@
 адвешх̣а̄ сарва-бхӯта̄на̄м̇  
 маитрат̣ карун̣а эва ча  
 нирмамо нирахан̇ка̄рат̣  
-сама-дут̣кха-сукхат̣ кшамӣсантушх̣ат̣ сататам̇ йогӣ  
+сама-дут̣кха-сукхат̣ кшамӣ  
+
+сантушх̣ат̣ сататам̇ йогӣ  
 йата̄тма̄ др̣д̣ха-ниш́чайат̣  
 майй арпита-мано-буддхир  
 йо мад-бхактат̣ са ме прийат̣
