--- a/12/18-19.md
+++ b/12/18-19.md
@@ -8,7 +8,9 @@
 самат̣ ш́атрау ча митре ча  
 татха̄ ма̄на̄пама̄найот̣  
 ш́ӣтошн̣а-сукха-дут̣кхешу  
-самат̣ сан̇га-виварджитат̣тулйа-нинда̄-стутир маунӣ  
+самат̣ сан̇га-виварджитат̣  
+
+тулйа-нинда̄-стутир маунӣ  
 сантушх̣о йена кеначит  
 аникетат̣ стхира-матир  
 бхактима̄н ме прийо нарат̣
