--- a/12/3-4.md
+++ b/12/3-4.md
@@ -8,7 +8,9 @@
 йе тв акшарам анирдеш́йам  
 авйактам̇ парйупа̄сате  
 сарватра-гам ачинтйам̇ ча  
-кӯх̣а-стхам ачалам̇ дхрувамсаннийамйендрийа-гра̄мам̇  
+кӯх̣а-стхам ачалам̇ дхрувам  
+
+саннийамйендрийа-гра̄мам̇  
 сарватра сама-буддхайат̣  
 те пра̄пнуванти ма̄м эва  
 сарва-бхӯта-хите рата̄т̣
