--- a/12/6-7.md
+++ b/12/6-7.md
@@ -8,7 +8,9 @@
 йе ту сарва̄н̣и карма̄н̣и  
 майи саннйасйа мат-пара̄т̣  
 ананйенаива йогена  
-ма̄м̇ дхйа̄йанта упа̄сатетеша̄м ахам̇ самуддхарта̄  
+ма̄м̇ дхйа̄йанта упа̄сате  
+
+теша̄м ахам̇ самуддхарта̄  
 мр̣тйу-сам̇са̄ра-са̄гара̄т  
 бхава̄ми на чира̄т па̄ртха  
 майй а̄веш́ита-четаса̄м
