--- a/13/1-2.md
+++ b/13/1-2.md
@@ -12,7 +12,9 @@
 пракр̣тим̇ пурушам̇ чаива  
 кшетрам̇ кшетра-джн̃ам эва ча  
 этад ведитум иччха̄ми  
-джн̃а̄нам̇ джн̃ейам̇ ча кеш́аваш́рӣ-бхагава̄н ува̄ча  
+джн̃а̄нам̇ джн̃ейам̇ ча кеш́ава  
+
+ш́рӣ-бхагава̄н ува̄ча  
 идам̇ ш́арӣрам̇ каунтейа  
 кшетрам итй абхидхӣйате  
 этад йо ветти там̇ пра̄хут̣  
