--- a/13/6-7.md
+++ b/13/6-7.md
@@ -8,7 +8,9 @@
 маха̄-бхӯта̄нй ахан̇ка̄ро  
 буддхир авйактам эва ча  
 индрийа̄н̣и даш́аикам̇ ча  
-пан̃ча чендрийа-гочара̄т̣иччха̄ двешат̣ сукхам̇ дут̣кхам̇  
+пан̃ча чендрийа-гочара̄т̣  
+
+иччха̄ двешат̣ сукхам̇ дут̣кхам̇  
 сан̇гха̄таш́ четана̄ дхр̣тит̣  
 этат кшетрам̇ сама̄сена  
 са-вика̄рам уда̄хр̣там
