--- a/13/8-12.md
+++ b/13/8-12.md
@@ -14,15 +14,24 @@
 ама̄нитвам адамбхитвам  
 ахим̇са̄ кша̄нтир а̄рджавам  
 а̄ча̄рйопа̄санам̇ ш́аучам̇  
-стхаирйам а̄тма-виниграхат̣индрийа̄ртхешу ваира̄гйам  
+стхаирйам а̄тма-виниграхат̣  
+
+индрийа̄ртхешу ваира̄гйам  
 анахан̇ка̄ра эва ча  
-джанма-мр̣тйу-джара̄-вйа̄дхи-дут̣кха-доша̄нударш́анамасактир анабхишван̇гат̣  
+джанма-мр̣тйу-джара̄-вйа̄дхи-  
+дут̣кха-доша̄нударш́анам  
+
+асактир анабхишван̇гат̣  
 путра-да̄ра-гр̣ха̄дишу  
 нитйам̇ ча сама-читтатвам  
-ишх̣а̄нишх̣опапаттишумайи ча̄нанйа-йогена  
+ишх̣а̄нишх̣опапаттишу  
+
+майи ча̄нанйа-йогена  
 бхактир авйабхича̄рин̣ӣ  
 вивикта-деш́а-севитвам  
-аратир джана-сам̇садиадхйа̄тма-джн̃а̄на-нитйатвам̇  
+аратир джана-сам̇сади  
+
+адхйа̄тма-джн̃а̄на-нитйатвам̇  
 таттва-джн̃а̄на̄ртха-дарш́анам  
 этадж джн̃а̄нам ити проктам  
 аджн̃а̄нам̇ йад ато ’нйатха̄
