--- a/15/3-4.md
+++ b/15/3-4.md
@@ -12,7 +12,9 @@
 на рӯпам асйеха татхопалабхйате  
 на̄нто на ча̄дир на ча сампратишх̣ха̄  
 аш́ваттхам энам̇ су-вирӯд̣ха-мӯлам  
-асан̇га-ш́астрен̣а др̣д̣хена чхиттва̄татат̣ падам̇ тат парима̄ргитавйам̇  
+асан̇га-ш́астрен̣а др̣д̣хена чхиттва̄  
+
+татат̣ падам̇ тат парима̄ргитавйам̇  
 йасмин гата̄ на нивартанти бхӯйат̣  
 там эва ча̄дйам̇ пурушам̇ прападйе  
 йатат̣ правр̣ттит̣ праср̣та̄ пура̄н̣ӣ
