--- a/16/1-3.md
+++ b/16/1-3.md
@@ -14,10 +14,13 @@
 джн̃а̄на-йога-вйавастхитит̣  
 да̄нам̇ дамаш́ ча йаджн̃аш́ ча  
 сва̄дхйа̄йас тапа а̄рджавам  
+
 ахим̇са̄ сатйам акродхас  
 тйа̄гат̣ ш́а̄нтир апаиш́унам  
 дайа̄ бхӯтешв алолуптвам̇  
-ма̄рдавам̇ хрӣр ача̄паламтеджат̣ кшама̄ дхр̣тит̣ ш́аучам  
+ма̄рдавам̇ хрӣр ача̄палам  
+
+теджат̣ кшама̄ дхр̣тит̣ ш́аучам  
 адрохо на̄ти-ма̄нита̄  
 бхаванти сампадам̇ даивӣм  
 абхиджа̄тасйа бха̄рата
