--- a/16/11-12.md
+++ b/16/11-12.md
@@ -8,7 +8,9 @@
 чинта̄м апаримейа̄м̇ ча  
 пралайа̄нта̄м упа̄ш́рита̄т̣  
 ка̄мопабхога-парама̄  
-эта̄вад ити ниш́чита̄т̣а̄ш́а̄-па̄ш́а-ш́атаир баддха̄т̣  
+эта̄вад ити ниш́чита̄т̣  
+
+а̄ш́а̄-па̄ш́а-ш́атаир баддха̄т̣  
 ка̄ма-кродха-пара̄йан̣а̄т̣  
 ӣханте ка̄ма-бхога̄ртхам  
 анйа̄йена̄ртха-сан̃чайа̄н
