--- a/16/13-15.md
+++ b/16/13-15.md
@@ -10,10 +10,14 @@
 идам адйа майа̄ лабдхам  
 имам̇ пра̄псйе маноратхам  
 идам астӣдам апи ме  
-бхавишйати пунар дханамасау майа̄ хатат̣ ш́атрур  
+бхавишйати пунар дханам  
+
+асау майа̄ хатат̣ ш́атрур  
 ханишйе ча̄пара̄н апи  
 ӣш́варо ’хам ахам̇ бхогӣ  
-сиддхо ’хам̇ балава̄н сукхӣа̄д̣хйо ’бхиджанава̄н асми  
+сиддхо ’хам̇ балава̄н сукхӣ  
+
+а̄д̣хйо ’бхиджанава̄н асми  
 ко ’нйо ’сти садр̣ш́о майа̄  
 йакшйе да̄сйа̄ми модишйа  
 итй аджн̃а̄на-вимохита̄т̣
