--- a/17/26-27.md
+++ b/17/26-27.md
@@ -8,7 +8,9 @@
 сад-бха̄ве са̄дху-бха̄ве ча  
 сад итй этат прайуджйате  
 праш́асте карман̣и татха̄  
-сач-чхабдат̣ па̄ртха йуджйатейаджн̃е тапаси да̄не ча  
+сач-чхабдат̣ па̄ртха йуджйате  
+
+йаджн̃е тапаси да̄не ча  
 стхитит̣ сад ити чочйате  
 карма чаива тад-артхӣйам̇  
 сад итй эва̄бхидхӣйате
