--- a/17/5-6.md
+++ b/17/5-6.md
@@ -8,7 +8,9 @@
 аш́а̄стра-вихитам̇ гхорам̇  
 тапйанте йе тапо джана̄т̣  
 дамбха̄хан̇ка̄ра-сам̇йукта̄т̣  
-ка̄ма-ра̄га-бала̄нвита̄т̣каршайантат̣ ш́арӣра-стхам̇  
+ка̄ма-ра̄га-бала̄нвита̄т̣  
+
+каршайантат̣ ш́арӣра-стхам̇  
 бхӯта-гра̄мам ачетасат̣  
 ма̄м̇ чаива̄нтат̣ ш́арӣра-стхам̇  
 та̄н виддхй а̄сура-ниш́чайа̄н
