--- a/18/51-53.md
+++ b/18/51-53.md
@@ -10,10 +10,14 @@
 буддхйа̄ виш́уддхайа̄ йукто  
 дхр̣тйа̄тма̄нам̇ нийамйа ча  
 ш́абда̄дӣн вишайа̄м̇с тйактва̄  
-ра̄га-двешау вйудасйа чавивикта-севӣ лагхв-а̄ш́ӣ  
+ра̄га-двешау вйудасйа ча  
+
+вивикта-севӣ лагхв-а̄ш́ӣ  
 йата-ва̄к-ка̄йа-ма̄насат̣  
 дхйа̄на-йога-паро нитйам̇  
-ваира̄гйам̇ самупа̄ш́ритат̣ахан̇ка̄рам̇ балам̇ дарпам̇  
+ваира̄гйам̇ самупа̄ш́ритат̣  
+
+ахан̇ка̄рам̇ балам̇ дарпам̇  
 ка̄мам̇ кродхам̇ париграхам  
 вимучйа нирмамат̣ ш́а̄нто  
 брахма-бхӯйа̄йа калпате
