--- a/2/42-43.md
+++ b/2/42-43.md
@@ -8,7 +8,9 @@
 йа̄м има̄м̇ пушпита̄м̇ ва̄чам̇  
 правадантй авипаш́читат̣  
 веда-ва̄да-рата̄т̣ па̄ртха  
-на̄нйад астӣти ва̄динат̣ка̄ма̄тма̄нат̣ сварга-пара̄  
+на̄нйад астӣти ва̄динат̣  
+
+ка̄ма̄тма̄нат̣ сварга-пара̄  
 джанма-карма-пхала-прада̄м  
 крийа̄-виш́еша-бахула̄м̇  
 бхогаиш́варйа-гатим̇ прати
