--- a/5/27-28.md
+++ b/5/27-28.md
@@ -8,7 +8,9 @@
 спарш́а̄н кр̣тва̄ бахир ба̄хйа̄м̇ш́  
 чакшуш́ чаива̄нтаре бхрувот̣  
 пра̄н̣а̄па̄нау самау кр̣тва̄  
-на̄са̄бхйантара-ча̄рин̣ауйатендрийа-мано-буддхир  
+на̄са̄бхйантара-ча̄рин̣ау  
+
+йатендрийа-мано-буддхир  
 мунир мокша-пара̄йан̣ат̣  
 вигатеччха̄-бхайа-кродхо  
 йат̣ сада̄ мукта эва сат̣
