--- a/5/8-9.md
+++ b/5/8-9.md
@@ -8,7 +8,9 @@
 наива кин̃чит каромӣти  
 йукто манйета таттва-вит  
 паш́йан̃ ш́р̣н̣ван спр̣ш́ан̃ джигхранн  
-аш́нан гаччхан свапан ш́васанпралапан виср̣джан гр̣хн̣анн  
+аш́нан гаччхан свапан ш́васан  
+
+пралапан виср̣джан гр̣хн̣анн  
 унмишан нимишанн апи  
 индрийа̄н̣ӣндрийа̄ртхешу  
 вартанта ити дха̄райан
