--- a/6/11-12.md
+++ b/6/11-12.md
@@ -8,7 +8,9 @@
 ш́учау деш́е пратишх̣ха̄пйа  
 стхирам а̄санам а̄тманат̣  
 на̄тй-уччхритам̇ на̄ти-нӣчам̇  
-чаила̄джина-куш́оттарамтатраика̄грам̇ манат̣ кр̣тва̄  
+чаила̄джина-куш́оттарам  
+
+татраика̄грам̇ манат̣ кр̣тва̄  
 йата-читтендрийа-крийат̣  
 упавиш́йа̄сане йун̃джйа̄д  
 йогам а̄тма-виш́уддхайе
