--- a/6/13-14.md
+++ b/6/13-14.md
@@ -8,7 +8,9 @@
 самам̇ ка̄йа-ш́иро-грӣвам̇  
 дха̄райанн ачалам̇ стхират̣  
 сампрекшйа на̄сика̄грам̇ свам̇  
-диш́аш́ ча̄навалокайанпраш́а̄нта̄тма̄ вигата-бхӣр  
+диш́аш́ ча̄навалокайан  
+
+праш́а̄нта̄тма̄ вигата-бхӣр  
 брахмача̄ри-врате стхитат̣  
 манат̣ сам̇йамйа мач-читто  
 йукта а̄сӣта мат-парат̣
