--- a/6/20-23.md
+++ b/6/20-23.md
@@ -11,13 +11,19 @@
 йатропарамате читтам̇  
 нируддхам̇ йога-севайа̄  
 йатра чаива̄тмана̄тма̄нам̇  
-паш́йанн а̄тмани тушйатисукхам а̄тйантикам̇ йат тад  
+паш́йанн а̄тмани тушйати  
+
+сукхам а̄тйантикам̇ йат тад  
 буддхи-гра̄хйам атӣндрийам  
 ветти йатра на чаива̄йам̇  
-стхиташ́ чалати таттватат̣йам̇ лабдхва̄ ча̄парам̇ ла̄бхам̇  
+стхиташ́ чалати таттватат̣  
+
+йам̇ лабдхва̄ ча̄парам̇ ла̄бхам̇  
 манйате на̄дхикам̇ татат̣  
 йасмин стхито на дут̣кхена  
-гурун̣а̄пи вича̄лйатетам̇ видйа̄д дут̣кха-сам̇йога-вийогам̇ йога-сам̇джн̃итам
+гурун̣а̄пи вича̄лйате  
+
+там̇ видйа̄д дут̣кха-сам̇йога-вийогам̇ йога-сам̇джн̃итам
 
 _йатра_ — (на том уровне) где; _упарамате_ — прекращает (поскольку испытывает духовное блаженство); _читтам_ — деятельность ума; _нируддхам_ — отстраненную от материального; _йога-севайа̄_ — практикой йоги; _йатра_ — где; _ча_ — также; _эва_ — безусловно; _а̄тмана̄_ — чистым умом; _а̄тма̄нам_ — душу; _паш́йан_ — осознающий (положение); _а̄тмани_ — в душе; _тушйати_ — испытывает; _сукхам_ — счастье; _а̄тйантикам_ — высшее; _йат_ — которое; _тат_ — то; _буддхи_ — разумом; _гра̄хйам_ — доступное; _атӣндрийам_ — трансцендентное; _ветти_ — знает; _йатра_ — где; _на_ — не; _ча_ — также; _эва_ — безусловно; _айам_ — он; _стхитат̣_ — находящийся; _чалати_ — движется; _таттватат̣_ — от истины; _йам_ — которую; _лабдхва̄_ — постигнув; _ча_ — также; _апарам_ — другое; _ла̄бхам_ — достижение; _манйате_ — считает; _на_ — не; _адхикам_ — больше; _татат̣_ — того; _йасмин_ — на котором; _стхитат̣_ — находящийся; _на_ — не; _дут̣кхена_ — страданием; _гурун̣а̄ апи_ — даже очень тяжким; _вича̄лйате_ — колеблется; _там_ — то; _видйа̄т_ — пусть знает; _дут̣кха-сам̇йога_ — страданий, возникающих от соприкосновения с материей; _вийогам_ — уничтожение; _йога-сам̇джн̃итам_ — называемое йогическим трансом.
 
