--- a/14/22-25.md
+++ b/14/22-25.md
@@ -15,13 +15,18 @@
 мохам эва ча па̄н̣д̣ава  
 на двешх̣и самправр̣тта̄ни  
 на нивр̣тта̄ни ка̄н̇кшати  
+
 уда̄сӣна-вад а̄сӣно  
 гун̣аир йо на вича̄лйате  
 гун̣а̄ вартанта итй эвам̇  
-йо ’ватишх̣хати нен̇гатесама-дут̣кха-сукхат̣ сва-стхат̣  
+йо ’ватишх̣хати нен̇гате  
+
+сама-дут̣кха-сукхат̣ сва-стхат̣  
 сама-лошх̣а̄ш́ма-ка̄н̃чанат̣  
 тулйа-прийа̄прийо дхӣрас  
-тулйа-нинда̄тма-сам̇стутит̣ма̄на̄пама̄найас тулйас  
+тулйа-нинда̄тма-сам̇стутит̣  
+
+ма̄на̄пама̄найас тулйас  
 тулйо митра̄ри-пакшайот̣  
 сарва̄рамбха-паритйа̄ги  
 гун̣а̄тӣтат̣ са учйате
